--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.elplus</groupId>
-    <artifactId>servicepublication</artifactId>
+    <artifactId>serviceclient</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>servicepublication</name>
+    <name>serviceclient</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
